@@ -1,3 +1,11 @@
+2008-05-10  Curtis Gedak  <gedakc@gmail.com>
+
+	* gparted.in: Enhanced script to use hal-lock only if it exists
+	  - This removes the absolute requirement for hal-lock and
+	    enables systems without HAL to use GParted.
+
+	* configure.in: Removed check for hal-lock program (added 2008-05-08)
+
 2008-05-08  Curtis Gedak  <gedakc@gmail.com>
 
 	* README: Added note about hal-lock and HAL requirement
